# cfs-funding-repository-5712677c

./: .gitignore  README.md  cfs-funding-portal-architecture.md  cfs-funding-portal.json
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_svi_catalog.py  003_seed_test_data.py
backend/app/: config.py  database.py  exceptions.py  main.py
backend/app/applications/: enums.py  models.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/common/: audit.py  base_model.py  circuit_breaker.py  logging_config.py  metrics.py  pagination.py
backend/app/documents/: models.py  router.py  schemas.py  service.py
backend/app/geography/: models.py  router.py  schemas.py  service.py
backend/app/health/: checks.py  router.py
backend/app/ingestion/: models.py  router.py  schemas.py  service.py
backend/app/ingestion/adapters/: base.py  cfs_internal.py  environics.py  (+5 more)
backend/app/middleware/: correlation_id.py  rate_limiting.py  request_logging.py
backend/app/notifications/: service.py
backend/app/organizations/: models.py  router.py  schemas.py  service.py
backend/app/reporting/: router.py  schemas.py  service.py
backend/app/reviews/: models.py  router.py  schemas.py  service.py
backend/app/vulnerability/: catalog.py  engine.py  enums.py  models.py  router.py  schemas.py  service.py
backend/scripts/: generate_test_data.py
backend/tests/: conftest.py  test_health.py  test_svi_engine.py
(+52 files in other folders)
